--- a/item_new_2.html
+++ b/item_new_2.html
@@ -3,219 +3,223 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title> News | ICT LAB</title>
+  <title> News | ICT LAB</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/modern-business.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/modern-business.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- Custom Fonts -->
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <![endif]-->
 
-</head>
+      </head>
 
-<body>
+      <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html">Start Bootstrap</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+              <ul class="nav navbar-nav navbar-right">
+                <li>
+                  <a href="about.html">About</a>
+                </li>
+                <li>
+                  <a href="services.html">Services</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact</a>
+                </li>
+                <li class="dropdown active">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
                     <li>
-                        <a href="about.html">About</a>
+                      <a href="portfolio-1-col.html">1 Column Portfolio</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                      <a href="portfolio-2-col.html">2 Column Portfolio</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                      <a href="portfolio-3-col.html">3 Column Portfolio</a>
                     </li>
-                    <li class="dropdown active">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li class="active">
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
+                    <li>
+                      <a href="portfolio-4-col.html">4 Column Portfolio</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li>
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
+                    <li class="active">
+                      <a href="portfolio-item.html">Single Portfolio Item</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="blog-home-1.html">Blog Home 1</a>
                     </li>
-                </ul>
+                    <li>
+                      <a href="blog-home-2.html">Blog Home 2</a>
+                    </li>
+                    <li>
+                      <a href="blog-post.html">Blog Post</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="full-width.html">Full Width Page</a>
+                    </li>
+                    <li>
+                      <a href="sidebar.html">Sidebar Page</a>
+                    </li>
+                    <li>
+                      <a href="faq.html">FAQ</a>
+                    </li>
+                    <li>
+                      <a href="404.html">404</a>
+                    </li>
+                    <li>
+                      <a href="pricing.html">Pricing Table</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+          </div>
+          <!-- /.container -->
+        </nav>
 
-    <!-- Page Content -->
-    <div class="container">
+        <!-- Page Content -->
+        <div class="container">
 
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
+          <!-- Page Heading/Breadcrumbs -->
+          <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header"> Call for bachelor internships at ICTLab    
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active"> <a href="news.html"> News </a></li>
-                </ol>
+              <h1 class="page-header"> Call for bachelor internships at ICTLab    
+              </h1>
+              <ol class="breadcrumb">
+                <li><a href="index.html">Home</a>
+                </li>
+                <li class="active"> <a href="news.html"> News </a></li>
+              </ol>
             </div>
-        </div>
-        <!-- /.row -->
+          </div>
+          <!-- /.row -->
 
-        <!-- Portfolio Item Row -->
-        <div class="row">
+          <!-- Portfolio Item Row -->
+          <div class="row">
 
             <div >
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="img-center" src="img_new/new2full.jpg" alt="">
-                        </div>
-                        
-                    </div>
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img class="img-center" src="img_new/new2full.jpg" alt="">
+                  </div>
 
                 </div>
-                <div class="content-new">
-                    <p>In the context of the SWARMS project (see the figure) of our ICTLab of USTH, we are looking for ICT bachelor students  who prefers to do his/her final internship in the ICTLab. If you get interested, please feel free to contact the supervisors mentioned in the subjects via their email or directly at ICTLab. We will study your application and interviews will be held to select the appropriate candidates.</p>
-                    <p>The internships will be hosted by the ICT lab of USTH. Candidates will be selected according to their academical and programming skills as well as the adequation of their profile with the subject. The selected students may get some extract supporting salary depending on the particular policy of each project.</p>
-                    <p> <strong> The detail of the 5 internship subjects can be found in the following links: </strong> </p>
-                    <p style="color:red"> Topic 1: Android application development for image, voice and text acquisitions </p> 
-                    <p style="color:red">Topic 2: Nonparametric method for image analysis </p>
-                    <p style="color:red">Topic 3: Deep learning for image analysis – application to dengue fever risky sites monitoring </p>
-                    <p style="color:red">Topic 4: Hidden Markov Model (HMM) for automatic speech recognition (ASR) with special name entities for dengue fever risky sites monitoring </p>
+
+              </div>
+              <div class="content-new">
+                <p>In the context of the SWARMS project (see the figure) of our ICTLab of USTH, we are looking for ICT bachelor students  who prefers to do his/her final internship in the ICTLab. If you get interested, please feel free to contact the supervisors mentioned in the subjects via their email or directly at ICTLab. We will study your application and interviews will be held to select the appropriate candidates.</p>
+                <p>The internships will be hosted by the ICT lab of USTH. Candidates will be selected according to their academical and programming skills as well as the adequation of their profile with the subject. The selected students may get some extract supporting salary depending on the particular policy of each project.</p>
+                <p> <strong> The detail of the 5 internship subjects can be found in the following links: </strong> </p>
+                <p style="color:red"> Topic 1: Android application development for image, voice and text acquisitions </p> 
+                <p style="color:red">Topic 2: Nonparametric method for image analysis </p>
+                <p style="color:red">Topic 3: Deep learning for image analysis – application to dengue fever risky sites monitoring </p>
+                <p style="color:red">Topic 4: Hidden Markov Model (HMM) for automatic speech recognition (ASR) with special name entities for dengue fever risky sites monitoring </p>
+              </div>
+
             </div>
+            <!-- /.row -->
 
-        </div>
-        <!-- /.row -->
-
-        <!-- Related Projects Row -->
-        <div class="row">
+            <!-- Related Projects Row -->
+            <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Related News</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="item_new_1.html">
+                    <img class="img-responsive img-hover img-related" src="img_new/new1_relate.jpeg" alt="">
                 </a>
+                <p class="relate-title"> <a href="item_new_1.html">Call for internship 2016 (HealthOmics)</a> </p>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="item_new_6.html">
+                    <img class="img-responsive img-hover img-related" src="img_new/new6_relate.jpg" alt="">
                 </a>
+                <p class="relate-title"> <a href="item_new_6.html">Visit of USTH consortium to ICT Lab</a> </p>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="item_new_3.html">
+                    <img class="img-responsive img-hover img-related" src="img_new/new3.1_relate.png" alt="">
                 </a>
+                <p class="relate-title"> <a href="item_new_3.html">ICTLab Poster: Epidemiological Risks Model for the Dengue Fever with Control Policies and Economic Mobility</a> </p>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="item_new_5.html">
+                    <img class="img-responsive img-hover img-related" src="img_new/new5_relate.jpg" alt="">
                 </a>
+                <p class="relate-title"> <a href="item_new_5.html">Kick-off Meeting of SWARMS Project</a> </p>
             </div>
 
         </div>
-        <!-- /.row -->
+            <!-- /.row -->
 
-        <hr>
+            <hr>
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
+            <!-- Footer -->
+            <footer>
+              <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                  <p>Copyright &copy; Your Website 2014</p>
                 </div>
-            </div>
-        </footer>
+              </div>
+            </footer>
 
-    </div>
-    <!-- /.container -->
+          </div>
+          <!-- /.container -->
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+          <!-- jQuery -->
+          <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+          <!-- Bootstrap Core JavaScript -->
+          <script src="js/bootstrap.min.js"></script>
 
-</body>
+        </body>
 
-</html>
+        </html>
