--- a/news.html
+++ b/news.html
@@ -140,7 +140,7 @@
                     <img class="img-responsive img-hover" src="img_new/healthomic.jpeg" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Call for internship 2016 (HealthOmics)</a>
+                    <a href="item_new_1.html">Call for internship 2016 (HealthOmics)</a>
                 </h3>
                 <p>The project Omics data analysis for human health and diseases in Vietnam (HealthOmics) is open for two interns, who may be in their second or third-year at ICT department, USTH. Candidates are expected to be interested in computational biology but not necessarily having experience in this field and will be trained where necessary.</p>
             </div>
@@ -159,22 +159,22 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                <a href="item_new_3.html">
+                    <img class="img-responsive img-hover" src="img_new/new3.1_thumb.png" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Three</a>
+                    <a href="item_new_3.html">ICTLab Poster: Epidemiological Risks Model for the Dengue Fever with Control Policies and Economic Mobility</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Abstract: The aim of this project is to design a model which can represent the dynamics of spreading of the dengue fever in indirect correlation with the climate and considering healthcare policies and the economic mobility of different countries. The final result of the model is to show for the concerned countries that the limitation of spreading is possible thanks to policies, but also the combination, communication, synchronisation of members of a policy is at least as crucial as policy itself...</p>
             </div>
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                <a href="item_new_4.html">
+                    <img class="img-responsive img-hover" src="img_new/new4_thumb.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Four</a>
+                    <a href="item_new_4.html">ICTLab Poster: SWARMS (Say and Watch: Automated image/sound Recognition for Mobile monitoring Systems)</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Abstract: The objective of this project is to obtain a flexible and real-time monitoring network, which could supplement possibly existing (fixed) networks, and could then feed a decision-support system (through models and simulations of evolution scenarios) or support an advanced visualization of the phenomenon to monitor.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -182,30 +182,32 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                <a href="item_new_5.html">
+                    <img class="img-responsive img-hover" src="img_new/new5_thumb.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Five</a>
+                    <a href="item_new_5.html">Kick-off Meeting of SWARMS Project</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>SWARMS (Say and Watch: Automated image/sound Recognition for Mobile monitoring Systems) project is one of the two main projects of our ICTLab. The project is planned to start its implementation from January, 2016. The kickoff meeting happened in 18/12/2015 was an important event of the project.</p>
             </div>
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                <a href="item_new_6.html">
+                    <img class="img-responsive img-hover" src="img_new/new6_thumb.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Six</a>
+                    <a href="item_new_6.html">Visit of USTH consortium to ICT Lab</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Time : 8.30am-10.30pm<br>
+                Date : Friday, 3 April 2015<br>
+                Location : ICTLab Meeting Room, 5th Floor, USTH Building</p>
             </div>
         </div>
         <!-- /.row -->
 
-        <hr>
+        <!-- <hr> -->
 
         <!-- Pagination -->
-        <div class="row text-center">
+        <!-- <div class="row text-center">
             <div class="col-lg-12">
                 <ul class="pagination">
                     <li>
@@ -231,7 +233,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <hr>
