--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> About us</h4>
+                        <h4><i class="fa fa-fw fa-check"></i> Who we are?</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>ICTLab is a joint international ICT research laboratory between USTH and Vietnamese and French partners. It involves researchers coming from USTH, IOIT (Institute of Information Technology, Hanoï), IRD (Institut de Recherche pour le Développement) and the University of La Rochelle, France.</p>
                         <div class="col-md-4"></div>
                         <a href="about.html" class="col-md-4 btn btn-default">Learn More</a>
                     </div>
@@ -147,7 +147,7 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Portfolio Heading</h2>
+                <h2 class="page-header">Our Seminars</h2>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
@@ -216,6 +216,26 @@
         </div>
 
         <hr>
+
+        <!-- Our Customers -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Our Partners</h2>
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img class="img-responsive customer-img" src="./img_home/partner1.png" alt="USTH">
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img class="img-responsive customer-img" src="./img_home/partner2.jpg" alt="USTH">
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img class="img-responsive customer-img" src="./img_home/partner3.png" alt="USTH">
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img class="img-responsive customer-img" src="./img_home/partner4.jpg" alt="USTH">
+            </div>
+        </div>
+        <!-- /.row -->
 
         <!-- Footer -->
         <footer>
