--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ICTLab</title>
+    <title>ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -68,7 +68,7 @@
                                 <a href="news.html">News</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Events</a>
+                                <a href="event.html">Events</a>
                             </li>
                         </ul>
                     </li>
