Add 3 homepage market icon section

--- a/index.html
+++ b/index.html
@@ -129,13 +129,37 @@
                     Welcome to ICTLab
                 </h1>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Who we are?</h4>
+                        <h4><i class="fa fa-fw fa-compass"></i> Who we are?</h4>
                     </div>
                     <div class="panel-body">
-                        <p>ICTLab is a joint international ICT research laboratory between USTH and Vietnamese and French partners. It involves researchers coming from USTH, IOIT (Institute of Information Technology, Hanoï), IRD (Institut de Recherche pour le Développement) and the University of La Rochelle, France.</p>
+                        <p>ICTLab is a joint international ICT research laboratory between USTH and Vietnamese and French partners.</p>
+                        <div class="col-md-4"></div>
+                        <a href="about.html" class="col-md-4 btn btn-default">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-bar-chart"></i> Our Researches</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>Together with most of our partners, we are working on the two following projects: ARCHIVES, and SWARMS.</p>
+                        <div class="col-md-4"></div>
+                        <a href="about.html" class="col-md-4 btn btn-default">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-calendar"></i> Monthly Seminars</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>We hold monthly seminar in our place. We will talk about many different topics related to our researches.</p>
                         <div class="col-md-4"></div>
                         <a href="about.html" class="col-md-4 btn btn-default">Learn More</a>
                     </div>
@@ -147,37 +171,40 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Seminars</h2>
+                <h2 class="page-header">News</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+            <div class="col-md-4">
+                <h2>
+                    <a href="#">Call for internship 2016 (HealthOmics)</a>
+                </h2>
+                <p><i class="fa fa-clock-o"></i> March 2, 2016</p>
+                <a href="blog-post.html">
+                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
                 </a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+            <div class="col-md-4">
+                <h2>
+                    <a href="#">Call for bachelor internships at ICTLab</a>
+                </h2>
+                <p><i class="fa fa-clock-o"></i> January 24, 2016</p>
+                <a href="blog-post.html">
+                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
                 </a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+            <div class="col-md-4">
+                <h2>
+                    <a href="#">ICTLab Poster: Epidemiological Risks Model for the Dengue Fever with Control Policies and Economic Mobility</a>
+                </h2>
+                <p><i class="fa fa-clock-o"></i> January 11, 2016</p>
+                <a href="blog-post.html">
+                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
                 </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
+                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
         <!-- /.row -->
@@ -223,16 +250,24 @@
                 <h2 class="page-header">Our Partners</h2>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="./img_home/partner1.png" alt="USTH">
+                <a href="http://www.usth.edu.vn">
+                    <img class="img-responsive customer-img" src="./img_home/partner1.png" alt="USTH">
+                </a>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="./img_home/partner2.jpg" alt="USTH">
+                <a href="http://www.ioit.ac.vn">
+                    <img class="img-responsive customer-img" src="./img_home/partner2.jpg" alt="IOIT">
+                </a>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="./img_home/partner3.png" alt="USTH">
+                <a href="http://en.vietnam.ird.fr/">
+                    <img class="img-responsive customer-img" src="./img_home/partner3.png" alt="IRD">
+                </a>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="./img_home/partner4.jpg" alt="USTH">
+                <a href="http://www.univ-larochelle.fr/">
+                    <img class="img-responsive customer-img" src="./img_home/partner4.jpg" alt="LaRochelle">
+                </a>
             </div>
         </div>
         <!-- /.row -->
