Add homepage news section

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="panel-body">
                         <p>Together with most of our partners, we are working on the two following projects: ARCHIVES, and SWARMS.</p>
                         <div class="col-md-4"></div>
-                        <a href="about.html" class="col-md-4 btn btn-default">Learn More</a>
+                        <a href="#" class="col-md-4 btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                     <div class="panel-body">
                         <p>We hold monthly seminar in our place. We will talk about many different topics related to our researches.</p>
                         <div class="col-md-4"></div>
-                        <a href="about.html" class="col-md-4 btn btn-default">Learn More</a>
+                        <a href="event.html" class="col-md-4 btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -174,38 +174,36 @@
                 <h2 class="page-header">News</h2>
             </div>
             <div class="col-md-4">
-                <h2>
-                    <a href="#">Call for internship 2016 (HealthOmics)</a>
-                </h2>
+                <h3>
+                    <a href="item_new_1.html">Call for internship 2016 (HealthOmics)</a>
+                </h3>
                 <p><i class="fa fa-clock-o"></i> March 2, 2016</p>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
+                <a href="item_new_1.html">
+                    <img class="img-responsive img-hover" src="./img_new/healthomic.jpeg" alt="">
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
+                <p>The project Omics data analysis for human health and diseases in Vietnam (HealthOmics) is open for two interns, who may be in their second or third-year at ICT department...</p>
             </div>
             <div class="col-md-4">
-                <h2>
-                    <a href="#">Call for bachelor internships at ICTLab</a>
-                </h2>
+                <h3>
+                    <a href="item_new_2.html">Call for bachelor internships at ICTLab</a>
+                </h3>
                 <p><i class="fa fa-clock-o"></i> January 24, 2016</p>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
+                <a href="item_new_2.html">
+                    <img class="img-responsive img-hover" src="./img_new/new2.jpeg" alt="">
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
+                <p>In the context of the SWARMS project (see the figure) of our ICTLab of USTH, we are looking for ICT bachelor students  who prefers to do his/her final internship in the ICTLab...</p>
             </div>
             <div class="col-md-4">
-                <h2>
-                    <a href="#">ICTLab Poster: Epidemiological Risks Model for the Dengue Fever with Control Policies and Economic Mobility</a>
-                </h2>
+                <h3>
+                    <a href="item_new_3.html">ICTLab Poster: Epidemiological Risks...</a>
+                </h3>
                 <p><i class="fa fa-clock-o"></i> January 11, 2016</p>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
+                <a href="item_new_3.html">
+                    <img class="img-responsive img-hover" src="./img_new/new3.1_thumb.png" alt="">
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
+                <p>The aim of this project is to design a model which can represent the dynamics of spreading of the dengue fever in indirect correlation with the climate and considering healthcare policies...</p>
             </div>
+            <p class="text-right"><a href="news.html">Read more...</a></p>
         </div>
         <!-- /.row -->
 
